Prevent grid items from overflowing container
Used JS to calculate grid item dimensions as percentage
of fixed container dimensions, using prompt input to calculate
percentage

--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,51 @@
 * {
-    border: 1px solid salmon;
+    outline: 1px solid salmon;
+    box-sizing: border-box;
 }
+
 body {
     box-sizing: border-box;
     display: flex;
-    flex-direction: column-reverse; 
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
     background-color: #142d4c;
-    flex: 1;
+    /* flex: 1; */
     }
- .body-double {
+.body-double {
+    display: flex;
+    flex-direction: column;
+    background-color: #142d4c;
+    padding: 0;
+    margin: 0;
+    justify-content: center;
+    align-items:center;
 
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: column; 
-        background-color: #142d4c;
-        flex: 1;
-        
- }   
+
+ }
 #page-name {
     display: flex;
     justify-content: center;
     align-items:center;
     flex-direction: column;
     background-color: #ececec;
+    padding: 15px;
 }
 .container {
     display:flex;
     flex-wrap: wrap;
-    width: 100%;
-    height: 100%;
     justify-content: center;
     align-items:center;
-    
-   
+   width: 600px;
+   height: 300px;
+    padding: 5px;
 }
 
 .grid-item{
-    box-sizing: border-box;
-    flex-shrink: 1;
     background-color: #9fd3c7;
     /* border: 1px solid yellow; */
-    width: calc(100% / 16);
-    height: calc(100% / 16);
-    min-height: 10px;
-    min-width: 10px;
-   
+    /* width: calc(100% / 16); */
+    min-height: 1px;
+    min-width: 1px;
+
 }
